# nauty-Traces-sys

./: Cargo.toml  Changes.md  LICENSE  Readme.md  build.rs  wrapper-bundled.h  wrapper.h
src/: bindings.rs  lib.rs
src/nauty2_8_9/: changes24-28.txt  gtnauty.c  gtools.c  gtools.h  gutil2.c  naugroup.c  nausparse.h  nautil.c  naututil-h.in  naututil.c  naututil.h  nauty.h  sorttemplates.c
