[package]
name = "nauty-Traces-sys"
version = "0.7.0"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
edition = "2021"
description = "Low-level bindings for nauty and Traces"
license = "Apache-2.0"
readme = "Readme.md"
keywords = ["graph-algorithms"]
categories = ["external-ffi-bindings", "mathematics"]
repository = "https://github.com/a-maier/nauty-Traces-sys"

[build-dependencies]
bindgen = "0.70"
cc = { version = "1.0", optional = true }

[dependencies]
libc = { version = "0.2", optional = true }
num-integer = "0.1"

[features]
default = ["bundled", "tls"]
bundled = ["cc", "libc"]
tls = ["bundled"]
# TOOD: detect c compiler support
lzc = ["bundled"]
popcnt = ["bundled"]
native = ["bundled", "lzc", "popcnt"]
