[package]
name = "nauty-Traces-sys"
version = "0.9.0"
authors = ["Andreas Maier <amaier@ifae.es>"]
edition = "2021"
description = "Low-level bindings for nauty and Traces"
license = "Apache-2.0"
readme = "Readme.md"
keywords = ["graph-algorithms"]
categories = ["external-ffi-bindings", "mathematics"]
repository = "https://github.com/a-maier/nauty-Traces-sys"
rust-version = "1.82"

[build-dependencies]
bindgen = "0.71"
cc = { version = "1.2", optional = true }

[dependencies]
libc = { version = "0.2", optional = true }

[features]
default = ["bundled", "tls"]
bundled = ["cc", "libc"]
tls = ["bundled"]
# TOOD: detect c compiler support
lzc = ["bundled"]
popcnt = ["bundled"]
native = ["bundled", "lzc", "popcnt"]
